[package]
name = "vault-relayer"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "1.0.1", features = ["full"] }
anyhow = "1"
tokio = { version = "1", features = ["full"] }
serde_json = "1"
dotenvy = "0.15.7"
url = "2.5.4"
alloy-sol-types = "1.0.1"
alloy-contract = "1.0.1"
alloy-signer-wallet = "0.0.0-reserved"
k256 = { version = "0.13", features = ["ecdsa"] }
hex = "0.4"
sha3 = "0.10.8"
rlp = "0.5"
alloy-dyn-abi = "1.3.0"
ethers = "2.0.14"


